--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,20 +23,20 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/* changed div to section */
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/* changed div to section */
+.header section ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/* changed div to section */
+.header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
