--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,36 +7,36 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* remove class . to each header section */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-/* changed div to section */
-.header section {
+/* changed div to nav*/
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/* changed div to section */
-.header section ul {
+/* changed div to nav */
+header nav ul {
     list-style-type: none;
 }
-/* changed div to section */
-.header section ul li {
+/* changed div to nav */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -195,6 +195,7 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+/* changed h2 to h4 */
+.footer h4 {
     font-size: 20px;
 }
